fix for flickering, favicon added

--- a/src/css/front-page.css
+++ b/src/css/front-page.css
@@ -455,33 +455,6 @@ and (max-device-width : 960px) {
     top: 60px;
   }
 }
-.loader-wrapper {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: black;
-    opacity: 0.8;
-    z-index: 10000;
-}
-
-.loader-wrapper .loader {
-    border: 5px solid #f3f3f3;
-    border-radius: 50%;
-    border-top: 5px solid #3498db;
-    width: 80px;
-    height: 80px;
-    -webkit-animation: spin 2s linear infinite;
-    -moz-animation:  spin 2s linear infinite;
-    animation: spin 2s linear infinite;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-}
 
 @-webkit-keyframes spin {
     0% { -webkit-transform: rotate(0deg); }
